examples/good/02-03-add-string.lagger
int main(){
    string a = "Bonjour";
    string b = " :)";
    println(a + b);

    if ( a + b != "Bonjour :)" ) {
        error("ERROR");
    }

    return 0;
}