examples/bad/06-01-wrong-function-name.lagger
int println(int n){
    println(n);
    return 1;
}

int main(){
    int a;
    a = 1;
    println(a);
    return 1;
}